# StreamPowerErosion

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
code/: array2.cpp  array2.h  box2.cpp  box2.h  camera.cpp  camera.h  evector.cpp  evector.h  evector2.cpp  ivector.cpp  ivector.h  main.cpp  mathematics.cpp  mathematics.h  noise.h  random.cpp  random.h  ray.cpp  ray.h  scalarfield2.cpp  scalarfield2.h  shader-api.cpp  shader-api.h  spe_shader.cpp  spe_shader.h  terrainwidget.cpp  terrainwidget.h  texture.cpp  texture.h  window.cpp  window.h
data/shaders/: heightfield_raytrace_330.glsl  spe_shader.glsl  streampower_glacier.glsl
